tests/functional/lang/eval-fail-length-1.err.exp
error:
       … while calling the 'length' builtin
         at /pwd/lang/eval-fail-length-1.nix:1:1:
            1| builtins.length 1
             | ^
            2|

       … while evaluating the first argument passed to builtins.length

       error: expected a list but found an integer: 1
